fixbug: composer command not found. close bothub-ai/qna-maker-sdk-php#5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,7 +3,7 @@ jobs:
   build:
     working_directory: ~/project
     docker:
-      - image: php:5.6-cli
+      - image: composer
     steps:
       - checkout
       - run:
