--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "~5.7"
+        "phpunit/phpunit": "~5.7",
+        "fzaninotto/faker": "^1.7"
     }
 }
